Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20616

ProjectExplorer: Crash when saving newly created qrc file

XMLWordPrintable

    • ce12c239fff88f0605b0e0a394ea4aaae424db66

      Steps to reproduce:

      • create a simple project from template
      • add a Qt resource file to this project
      • inside the qrc file editor
        • add a prefix
        • add a file to this prefix
      • Save the file

      Current result:

      • QC crashes

       

        1. bt.log
          53 kB
          Christian Stenger
        For Gerrit Dashboard: QTCREATORBUG-20616
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes