ProjectExplorer: Fix replaceSubtree for project nodes

Ensure to keep node alive as long as needed.

Task-number: QTCREATORBUG-20616
Change-Id: I57a720d3e31e14bcb8388de5fef68f70db370c90
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>